Use scheduled sample-rater for better sample precision